--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,16 +7,26 @@
 
   h1 {
     color: white;
+    font-size: 24px;
   }
 
   input {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 3rem;
     border-radius: 15px;
     border: none;
+    font-size: 16px;
+    background-image: url("search.svg");
+    background-repeat: no-repeat;
+    background-size: 25px;
+    background-position: 10px;
   }
 
   input:focus {
     border: none;
     outline: none;
+  }
+
+  a {
+    text-decoration: none;
   }
 }
