--- a/src/pages/MovieDetails/MovieDetails.scss
+++ b/src/pages/MovieDetails/MovieDetails.scss
@@ -51,22 +51,50 @@
     }
   }
 
-  &__button {
-    display: block;
-    margin-top: 40px;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #0071c5;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    text-align: center;
-    font-size: 24px;
+  button {
+    align-items: center;
+    background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    border: 0;
+    border-radius: 8px;
+    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: flex;
+    font-family: Phantomsans, sans-serif;
+    font-size: 18px;
+    justify-content: center;
+    line-height: 1em;
+    max-width: 100%;
+    min-width: 140px;
+    padding: 3px;
     text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
 
-    &:hover {
-      background-color: #005896;
-    }
+  button:active,
+  button:hover {
+    outline: 0;
+  }
+
+  button span {
+    background-color: rgb(5, 6, 45);
+    padding: 16px 24px;
+    border-radius: 6px;
+    width: 100%;
+    height: 100%;
+    transition: 300ms;
+  }
+
+  button:hover span {
+    background: none;
+  }
+
+  button:active {
+    transform: scale(0.9);
   }
 }
