--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,20 +10,46 @@
     font-size: 24px;
   }
 
-  input {
-    padding: 0.5rem 3rem;
-    border-radius: 15px;
-    border: none;
-    font-size: 16px;
-    background-image: url("search.svg");
-    background-repeat: no-repeat;
-    background-size: 25px;
-    background-position: 10px;
+  .group {
+    display: flex;
+    line-height: 28px;
+    align-items: center;
+    position: relative;
+    max-width: 190px;
   }
 
-  input:focus {
-    border: none;
+  .input {
+    width: 100%;
+    height: 40px;
+    line-height: 28px;
+    padding: 0 1rem;
+    padding-left: 2.5rem;
+    border: 2px solid transparent;
+    border-radius: 8px;
     outline: none;
+    background-color: #303030;
+    color: #f3f3f4;
+    transition: 0.3s ease;
+  }
+
+  .input::placeholder {
+    color: #9e9ea7;
+  }
+
+  .input:focus,
+  input:hover {
+    outline: none;
+    border-color: #5b42f3;
+    background-color: #303030;
+    box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
+  }
+
+  .icon {
+    position: absolute;
+    left: 1rem;
+    fill: #f3f3f4;
+    width: 1rem;
+    height: 1rem;
   }
 
   a {
