feat: change input

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -41,7 +41,7 @@
     outline: none;
     border-color: #5b42f3;
     background-color: #303030;
-    box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
+    box-shadow: 0 0 0 4px rgba(91, 66, 243, 10%);
   }
 
   .icon {
