feat: update UI

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  background-color: #171723;
 
   > div {
     margin: 15px;
