--- a/src/pages/MovieDetails/MovieDetails.scss
+++ b/src/pages/MovieDetails/MovieDetails.scss
@@ -1,6 +1,6 @@
 .MovieDetail {
   color: white;
-  background-color: rgb(48, 48, 48);
+  background-color: #171723;
   padding: 40px 0;
 
   &__container {
