--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -5,6 +5,8 @@
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
   transition: all 0.3s ease;
   min-height: 605px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
 
   &:hover {
     box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.4);
@@ -13,17 +15,20 @@
 
   .movie-image {
     position: relative;
-    background-color: #303030;
+    background-color: #171723;
 
     img {
       width: 100%;
       height: 100%;
+
       object-fit: cover;
+      border-radius: 16px;
     }
 
     &::before {
       content: "";
       display: block;
+
       position: absolute;
       top: 0;
       left: 0;
@@ -42,19 +47,33 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #1d1d1d;
+    background-color: #2b2b36;
     padding: 15px;
 
     &__title {
       display: flex;
       justify-content: space-between;
 
+      h3 {
+        max-width: 250px;
+      }
+
       .note {
         display: flex;
+
+        .imdb-10 {
+          color: rgba(255, 255, 255, 0.6);
+        }
 
         .star {
           margin-top: 3px;
         }
+      }
+
+      .number-votes {
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.6);
+        text-align: right;
       }
 
       p {
@@ -78,7 +97,7 @@
       align-items: center;
       background-image: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
       border: 0;
-      border-radius: 8px;
+      border-radius: 16px;
       box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
       box-sizing: border-box;
       color: #ffffff;
@@ -107,7 +126,7 @@
     button span {
       background-color: rgb(5, 6, 45);
       padding: 8px 16px;
-      border-radius: 6px;
+      border-radius: 16px;
       width: 100%;
       height: 100%;
       transition: 300ms;
